<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gac_logo"
        android:src="@drawable/account_circle"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_btn"
        android:padding="18dp"
        android:text="@string/create_account_btn"
        android:textColor="@color/light_green"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_btn"
        android:padding="18dp"
        android:text="@string/reset_back_btn"
        android:textColor="@color/light_green"
        android:textSize="20sp"
        android:layout_gravity="center"/>

</LinearLayout>
