<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/centre_background"
    android:padding="20dp">


    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:layout_alignParentEnd="true"

        android:src="@drawable/ballsports_cdcpd"
        >

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffff"
            android:text="@string/game_form_title"
            android:id="@+id/textView"
            android:textStyle="bold"
            style="@style/modifiedEditText"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            >

        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:padding="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="30dp"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            style="@style/modifiedEditText"
                            app:hintTextColor="@color/primaryTextColor"
                            android:hint="@string/choose_title_text"
                            android:id="@+id/titleText"
                            android:padding="20dp"
                            android:textSize="15dp"
                            android:textColorHint="#5b7b7d">

                        </EditText>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/chooseSport"
                            android:hint="@string/choose_sport"
                            app:hintTextColor="#5b7b7d"

                            android:layout_marginTop="10dp"
                            >

                            <AutoCompleteTextView
                                android:textSize="17dp"
                                android:id="@+id/autoCompleteTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:textColorHint="#5b7b7d"
                                style="@style/modifiedEditText"

                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            style="@style/modifiedEditText"
                            app:hintTextColor="@color/cardview_light_background"
                            android:hint="@string/location"
                            android:id="@+id/locationText"
                            android:textColorHint="#5b7b7d"
                            android:textSize="17dp"
                            android:padding="20dp"
                            android:layout_marginTop="10dp">

                        </EditText>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <EditText
                                style="@style/modifiedEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginLeft="30dp"
                                android:id="@+id/minPlayersText"
                                android:hint="@string/min_players_text"
                                android:inputType="number"
                                android:textSize="15dp"
                                android:padding="20dp"
                                android:textColorHint="#5b7b7d"
                                app:hintTextColor="@color/cardview_light_background">

                            </EditText>

                            <EditText
                                style="@style/modifiedEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:gravity="center"
                                android:textSize="15dp"
                                android:hint="Max Players"
                                android:inputType="number"
                                android:id="@+id/maxPlayersText"
                                android:padding="20dp"
                                android:textColorHint="#5b7b7d">

                            </EditText>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <com.google.android.material.button.MaterialButton
                                style="@style/Widget.Material3.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/timeButton"
                                android:onClick="popTimePicker"
                                android:textColor="#5b7b7d"
                                android:layout_marginLeft="50dp"
                                android:textSize="15dp"
                                android:hint="@string/time_text"
                                app:strokeColor="@color/primaryTextColor"
                                android:textColorHint="#5b7b7d"


                                >

                            </com.google.android.material.button.MaterialButton>

                            <com.google.android.material.button.MaterialButton
                                style="@style/Widget.Material3.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="15dp"
                                android:textColor="#5b7b7d"
                                android:id="@+id/dateButton"
                                android:onClick="popDatePicker"
                                android:hint="@string/date_text"
                                app:strokeColor="@color/primaryTextColor"
                                android:layout_marginLeft="40dp"
                                android:textColorHint="#5b7b7d"


                                >

                            </com.google.android.material.button.MaterialButton>


                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"
                            android:text="@string/create_game_text"
                            android:textSize="19dp"
                            android:paddingHorizontal="30dp"
                            android:id="@+id/createGameButton"
                            android:layout_gravity="center"
                            android:background="@drawable/centre_button"
                            android:inputType="text"
                            app:backgroundTint="@null"
                            android:typeface="normal"


                            >

                        </com.google.android.material.button.MaterialButton>



                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</RelativeLayout>
